--- a/ios/Boardie/Info.plist
+++ b/ios/Boardie/Info.plist
@@ -63,6 +63,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>ProductSans.ttf</string>
+		<string>ProductSansBold.ttf</string>
 	</array>
 </dict>
 </plist>
