--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react-native": "0.55.1",
     "react-native-config": "^0.10.0",
     "react-native-i18n": "1.0.0",
-    "react-native-linear-gradient": "^2.4.2",
+    "react-native-linear-gradient": "2.4.0",
+    "react-native-progress": "^3.5.0",
     "react-native-vector-icons": "4.3.0",
+    "react-native-xml2js": "^1.0.3",
     "react-navigation": "^1.5.11",
     "react-navigation-redux-helpers": "^1.0.4",
     "react-redux": "^5.0.6",
